syntax = "proto3";

package commentrpc;
option go_package="./commentrpc";

message Request {
  string ping = 1;
}

message Response {
  string pong = 1;
}

service Commentrpc {
  rpc Ping(Request) returns(Response);
  rpc CreatePost (CreatePostReq) returns (CreatePostResp);
  rpc GetPostList (GetPostListReq) returns (GetPostListResp);
  rpc GetPostById (GetPostByIdReq) returns (GetPostByIdResp);
  rpc AddComments (AddCommentsReq) returns (AddCommentsResp);
  rpc getCommentsByPostId (GetCommentsReq) returns (GetCommentsResp);
}

message GetCommentsReq {
  int64  postId = 1;
}

message CommentItem {
  string content = 1;
  string userId = 2;
  string createdAt = 3;    // 时间转换为字符串
  string avatarUrl = 4;
}

message GetCommentsResp {
  repeated CommentItem commentList = 1;
}

message AddCommentsReq {
  int64 fatherId = 1;
  string content = 2;
}

message AddCommentsResp {
  int64  postId = 1;
}

message GetPostByIdReq {
  int64  postId = 1;
}

message GetPostByIdResp {
  PostItem postItem = 1;
}

message CreatePostReq {
  string title = 1;
  string content = 2;
  string tag = 3;
}

message CreatePostResp {
  int64 postId = 1;
}

message GetPostListReq {
  int32 page = 1;
  int32 pageSize = 2;
}

message GetPostListResp {
  repeated PostItem list = 1;
}

message PostItem {
  int64 id = 1;
  string title = 2;
  string content = 3;
  string userId = 4;
  int64 categoryId = 5;    // 新增字段
  string createdAt = 6;    // 时间转换为字符串
  string avatarUrl = 7;
  string tag = 8;
}